--- a/birthday-wishes/index.html
+++ b/birthday-wishes/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memories | Note & Birthday</title>
+    <title>غنوده الحب❤️</title>
 
     <!-- GSAP via CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
@@ -43,7 +43,7 @@
             </div>
             <div class="card" onclick="openProject('birthday')">
                 <div class="card-bg-glow"></div>
-                <h2>Birthday</h2>
+                <h2>عيد ميلاد الحلوه غند</h2>
             </div>
         </div>
     </section>
@@ -67,15 +67,14 @@
 
             <!-- Birthday Message (Birthday) -->
             <div id="birthday-msg">
-                Happy Birthday! <br>
-                <span class="letter" style="font-size: 1.5rem; font-family: 'Montserrat';">Wishing you the most magical year
-                    ahead.</span>
+                كل عام وانتي بخير <br>
+                <span class="letter" style="font-size: 1.5rem; font-family: 'Montserrat';">أتمنى لك ايام سعيده وحلوه يارب</span>
             </div>
             <model-viewer id="cake-model" src="Asset/strawberry_cake.glb" auto-rotate camera-controls disable-zoom exposure="1.1"
                 shadow-intensity="1" style="width:380px; height:380px; margin-top:30px;">
             </model-viewer>
 
-            <div class="scroll-indicator">Scroll Down</div>
+            <div class="scroll-indicator">انزلي تحت</div>
         </div>
 
         <!-- Gallery -->
