--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
     <!-- Home View -->
     <section id="home-section">
         <div class="cards-container">
-            <div class="card" onclick="openProject('note')">
+            <!-- <div class="card" onclick="openProject('note')">
                 <div class="card-bg-glow"></div>
                 <h2>Note</h2>
-            </div>
+            </div> -->
             <div class="card" onclick="openProject('birthday')">
                 <div class="card-bg-glow"></div>
                 <h2>عيد ميلاد الحلوه غند</h2>
@@ -95,8 +95,8 @@
     <script>
         const assets = {
             note: {
-                video: "asset/video1.mp4",
-                audio: "asset/Music.mp3",
+                video: "Asset/video1.mp4",
+                audio: "Asset/Music.mp3",
                 gallery: [
                     "Asset/img1.jpg",
                     "Asset/img2.jpg",
@@ -107,8 +107,8 @@
                 ]
             },
             birthday: {
-                video: "asset/bg.mp4",
-                audio: "asset/audio.mp4",
+                video: "Asset/bg.mp4",
+                audio: "Asset/audio.mp4",
                 gallery: [
                     "Asset/img1.jpg",
                     "Asset/img2.jpg",
