--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
     <section id="project-section">
         <!-- Navigation -->
         <div class="nav-header">
-            <button class="btn" onclick="closeProject()">← Back</button>
+            <button class="btn" onclick="closeProject()">← تبي ترجعين يا عيوني</button>
             <div class="controls">
                 <button class="btn" id="restart-lyrics-btn" style="display:none;" onclick="restartLyrics()">Replay
                     Lyrics</button>
-                <button class="btn" onclick="toggleAudio()" id="audio-btn">Pause Music</button>
+                <button class="btn" onclick="toggleAudio()" id="audio-btn">تبين توقفين الاغنية</button>
             </div>
         </div>
 
@@ -68,7 +68,10 @@
             <!-- Birthday Message (Birthday) -->
             <div id="birthday-msg">
                 كل عام وانتي بخير <br>
-                <span class="letter" style="font-size: 1.5rem; font-family: 'Montserrat';">أتمنى لك ايام سعيده وحلوه يارب</span>
+                <span class="letter" style="font-size: 1.5rem; font-family: 'Montserrat';">
+                    في يوم ميلادك، أتمنى لو أقدر اهديك الدنيا وما فيها، لكن قلبي هو أغلى ما أملك، وكل عام وأنتِ تسكنينه. عمر مديد ومليان بالحب.
+                     كبرتي سنة وصار عندك تجعيدة زيادة😂🫣 بس لا تخافين، لسه أشوفك أحلى وحدة بالعالم (عشان ما تذبحيني). العمر كله يارب
+                </span>
             </div>
             <model-viewer id="cake-model" src="Asset/strawberry_cake.glb" auto-rotate camera-controls disable-zoom exposure="1.1"
                 shadow-intensity="1" style="width:380px; height:380px; margin-top:30px;">
@@ -79,7 +82,7 @@
 
         <!-- Gallery -->
         <div class="gallery-section">
-            <h3 class="gallery-title">Memories</h3>
+            <h3 class="gallery-title">صور لك حلوه يا حلوه</h3>
             <div class="gallery-grid" id="gallery-grid">
                 <!-- Images injected via JS -->
             </div>
