--- a/index.html
+++ b/index.html
@@ -37,13 +37,14 @@
     <!-- Home View -->
     <section id="home-section">
         <div class="cards-container">
-            <!-- <div class="card" onclick="openProject('note')">
-                <div class="card-bg-glow"></div>
-                <h2>Note</h2>
-            </div> -->
             <div class="card" onclick="openProject('birthday')">
                 <div class="card-bg-glow"></div>
                 <h2>عيد ميلاد الحلوه غند</h2>
+            </div>
+            <div class="card" onclick="openProject('note')">
+                <div class="card-bg-glow"></div>
+                <h2>أغنية صغنطوطه لك</h2>
+                <h4>افتحي الصفحة الاولى قبل هذي لأن ذي كرنج بس خطيتها عشانك بس🫣</h4>
             </div>
         </div>
     </section>
@@ -67,10 +68,13 @@
 
             <!-- Birthday Message (Birthday) -->
             <div id="birthday-msg">
-                كل عام وانتي بخير <br>
+                كل عام وانتي بخير غنوده يا عيوني انتي<br>
                 <span class="letter" style="font-size: 1.5rem; font-family: 'Montserrat';">
-                    في يوم ميلادك، أتمنى لو أقدر اهديك الدنيا وما فيها، لكن قلبي هو أغلى ما أملك، وكل عام وأنتِ تسكنينه. عمر مديد ومليان بالحب.
-                     كبرتي سنة وصار عندك تجعيدة زيادة😂🫣 بس لا تخافين، لسه أشوفك أحلى وحدة بالعالم (عشان ما تذبحيني). العمر كله يارب
+                    في يوم ميلادك أتمنى لو أقدر اهديك الدنيا وما فيها لكن أنتي هو أغلى ما أملك وكل عام وأنتي تسكنينه وعمر مديد ومليان بالحب
+                    <br>
+                     وكبرتي سنة وصار عندك تجاعيد زيادة😂🫣 بس لا تخافين لسى أشوفك أحلى وحده بالعالم (عشان ما تذبحيني) العمر كله يارب
+                    <br>
+                     عقبال مية سنة يارب وتتحقق كل أمانيك وأشوفك دايما مبسوطه وتضحكين ويبعد عنك كل الهموم يارب والله لا يحرمني منك يارب وتكبرين وتحققين كل أحلامك واحبك ❤️
                 </span>
             </div>
             <model-viewer id="cake-model" src="Asset/strawberry_cake.glb" auto-rotate camera-controls disable-zoom exposure="1.1"
@@ -100,14 +104,14 @@
             note: {
                 video: "Asset/video1.mp4",
                 audio: "Asset/Music.mp3",
-                gallery: [
-                    "Asset/img1.jpg",
-                    "Asset/img2.jpg",
-                    "Asset/img3.jpg",
-                    "Asset/img4.jpg",
-                    "Asset/img5.jpg",
-                    "Asset/img6.jpg"
-                ]
+                // gallery: [
+                //     "Asset/img1.jpg",
+                //     "Asset/img2.jpg",
+                //     "Asset/img3.jpg",
+                //     "Asset/img4.jpg",
+                //     "Asset/img5.jpg",
+                //     "Asset/img6.jpg"
+                // ]
             },
             birthday: {
                 video: "Asset/bg.mp4",
