--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
         </div>
 
         <!-- Gallery -->
-        <div class="gallery-section">
-            <h3 class="gallery-title">صور لك حلوه يا حلوه</h3>
-            <div class="gallery-grid" id="gallery-grid">
+        <!-- <div class="gallery-section"> -->
+            <!-- <h3 class="gallery-title">صور لك حلوه يا حلوه</h3> -->
+            <!-- <div class="gallery-grid" id="gallery-grid"> -->
                 <!-- Images injected via JS -->
-            </div>
-        </div>
+            <!-- </div> -->
+        <!-- </div> -->
     </section>
 
     <!-- Image Modal -->
@@ -104,38 +104,38 @@
             note: {
                 video: "Asset/video1.mp4",
                 audio: "Asset/Music.mp3",
-                // gallery: [
-                //     "Asset/img1.jpg",
-                //     "Asset/img2.jpg",
-                //     "Asset/img3.jpg",
-                //     "Asset/img4.jpg",
-                //     "Asset/img5.jpg",
-                //     "Asset/img6.jpg"
-                // ]
+                gallery: [
+                    // "Asset/img1.jpg",
+                    // "Asset/img2.jpg",
+                    // "Asset/img3.jpg",
+                    // "Asset/img4.jpg",
+                    // "Asset/img5.jpg",
+                    // "Asset/img6.jpg"
+                ]
             },
             birthday: {
                 video: "Asset/bg.mp4",
                 audio: "Asset/audio.mp4",
                 gallery: [
-                    "Asset/img1.jpg",
-                    "Asset/img2.jpg",
-                    "Asset/img3.jpg",
-                    "Asset/img4.jpg",
-                    "Asset/img5.jpg",
-                    "Asset/img6.jpg"
+                    // "Asset/img1.jpg",
+                    // "Asset/img2.jpg",
+                    // "Asset/img3.jpg",
+                    // "Asset/img4.jpg",
+                    // "Asset/img5.jpg",
+                    // "Asset/img6.jpg"
                 ]
             }
         };
 
         const lyrics = [
-            "Sambhaal ke rakha wo phool mera tu",
-            "Meri shayari mein zaroor raha tu",
-            "Jo aankhon mein pyaari si duniya basaayi",
-            "Wo duniya bhi tha tu, wo lamha bhi tha tu",
-            "Haan, lagte hain mujhko ye kisse sataane",
-            "Deta na dil mera tujhko bhulaane",
-            "Adhoore se vaade, adhoori si raatein",
-            "Ab hisse mein daakhil mere bas wo yaadein"
+            // "Sambhaal ke rakha wo phool mera tu",
+            // "Meri shayari mein zaroor raha tu",
+            // "Jo aankhon mein pyaari si duniya basaayi",
+            // "Wo duniya bhi tha tu, wo lamha bhi tha tu",
+            // "Haan, lagte hain mujhko ye kisse sataane",
+            // "Deta na dil mera tujhko bhulaane",
+            // "Adhoore se vaade, adhoori si raatein",
+            // "Ab hisse mein daakhil mere bas wo yaadein"
         ];
 
         // --- DOM ELEMENTS ---
