--- a/index.html
+++ b/index.html
@@ -108,24 +108,24 @@
                 video: "Asset/video1.mp4",
                 audio: "Asset/Music.mp3",
                 gallery: [
-                    // "Asset/img1.jpg",
-                    // "Asset/img2.jpg",
-                    // "Asset/img3.jpg",
-                    // "Asset/img4.jpg",
-                    // "Asset/img5.jpg",
-                    // "Asset/img6.jpg"
+                    "Asset/img1.jpg",
+                    "Asset/img2.jpg",
+                    "Asset/img3.jpg",
+                    "Asset/img4.jpg",
+                    "Asset/img5.jpg",
+                    "Asset/img6.jpg"
                 ]
             },
             birthday: {
                 video: "Asset/bg.mp4",
                 audio: "Asset/audio.mp4",
                 gallery: [
-                    // "Asset/img1.jpg",
-                    // "Asset/img2.jpg",
-                    // "Asset/img3.jpg",
-                    // "Asset/img4.jpg",
-                    // "Asset/img5.jpg",
-                    // "Asset/img6.jpg"
+                    "Asset/img1.jpg",
+                    "Asset/img2.jpg",
+                    "Asset/img3.jpg",
+                    "Asset/img4.jpg",
+                    "Asset/img5.jpg",
+                    "Asset/img6.jpg"
                 ]
             }
         };
