--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
         </div>
 
         <!-- Gallery -->
-        <!-- <div class="gallery-section"> -->
-            <!-- <h3 class="gallery-title">صور لك حلوه يا حلوه</h3> -->
-            <!-- <div class="gallery-grid" id="gallery-grid"> -->
+        <div class="gallery-section">
+            <h3 class="gallery-title">صور لك حلوه يا حلوه</h3>
+            <div class="gallery-grid" id="gallery-grid">
                 <!-- Images injected via JS -->
-            <!-- </div> -->
-        <!-- </div> -->
+            </div>
+        </div>
     </section>
 
     <!-- Image Modal -->
