--- a/index.html
+++ b/index.html
@@ -44,10 +44,6 @@
             <div class="card" onclick="openProject('note')">
                 <div class="card-bg-glow"></div>
                 <h2>أغنية صغنطوطه لك</h2>
-                <br>
-                <br>
-                <br>
-                <h4>افتحي الصفحة الاولى قبل هذي لأن ذي كرنج بس خطيتها عشانك بس🫣</h4>
             </div>
         </div>
     </section>
@@ -89,7 +85,7 @@
 
         <!-- Gallery -->
         <div class="gallery-section">
-            <h3 class="gallery-title">صور لك حلوه يا حلوه</h3>
+            <h3 class="gallery-title">احبك يا عيوني انتي وأعشقك والله يخليك للي تحبينهم</h3>
             <div class="gallery-grid" id="gallery-grid">
                 <!-- Images injected via JS -->
             </div>
@@ -106,26 +102,18 @@
         const assets = {
             note: {
                 video: "Asset/video1.mp4",
-                audio: "Asset/Music.mp3",
+                audio: "Asset/HBDD.mp3",
                 gallery: [
-                    "Asset/img1.jpg",
-                    "Asset/img2.jpg",
-                    "Asset/img3.jpg",
-                    "Asset/img4.jpg",
-                    "Asset/img5.jpg",
-                    "Asset/img6.jpg"
+                    "Asset/ghnd1.jpg",
+                    "Asset/ghnd2.jpg"
                 ]
             },
             birthday: {
                 video: "Asset/bg.mp4",
                 audio: "Asset/audio.mp4",
                 gallery: [
-                    "Asset/img1.jpg",
-                    "Asset/img2.jpg",
-                    "Asset/img3.jpg",
-                    "Asset/img4.jpg",
-                    "Asset/img5.jpg",
-                    "Asset/img6.jpg"
+                    "Asset/ghnd1.jpg",
+                    "Asset/ghnd2.jpg"
                 ]
             }
         };
