--- a/index.html
+++ b/index.html
@@ -104,16 +104,22 @@
                 video: "Asset/video1.mp4",
                 audio: "Asset/HBDD.mp3",
                 gallery: [
-                    "Asset/ghnd1.jpg",
-                    "Asset/ghnd2.jpg"
+                    "Asset/ghnd.png",
+                    "Asset/ghnd1.png",
+                    "Asset/ghnd2.png",
+                    "Asset/ghnd3.png",
+                    "Asset/ghnd4.png"
                 ]
             },
             birthday: {
                 video: "Asset/bg.mp4",
                 audio: "Asset/audio.mp4",
                 gallery: [
-                    "Asset/ghnd1.jpg",
-                    "Asset/ghnd2.jpg"
+                    "Asset/ghnd.png",
+                    "Asset/ghnd1.png",
+                    "Asset/ghnd2.png",
+                    "Asset/ghnd3.png",
+                    "Asset/ghnd4.png"
                 ]
             }
         };
