--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                     "Asset/ghnd.png",
                     "Asset/ghnd1.png",
                     "Asset/ghnd2.png",
-                    "Asset/ghnd3.png",
-                    "Asset/ghnd4.png"
+                    "Asset/ghnd4.png",
+                    "Asset/ghnd3.png"
                 ]
             },
             birthday: {
@@ -118,21 +118,20 @@
                     "Asset/ghnd.png",
                     "Asset/ghnd1.png",
                     "Asset/ghnd2.png",
-                    "Asset/ghnd3.png",
-                    "Asset/ghnd4.png"
+                    "Asset/ghnd4.png",
+                    "Asset/ghnd3.png"
                 ]
             }
         };
 
         const lyrics = [
-            // "Sambhaal ke rakha wo phool mera tu",
-            // "Meri shayari mein zaroor raha tu",
-            // "Jo aankhon mein pyaari si duniya basaayi",
-            // "Wo duniya bhi tha tu, wo lamha bhi tha tu",
-            // "Haan, lagte hain mujhko ye kisse sataane",
-            // "Deta na dil mera tujhko bhulaane",
-            // "Adhoore se vaade, adhoori si raatein",
-            // "Ab hisse mein daakhil mere bas wo yaadein"
+            "كل عام وانتي الحب",
+            "كل عام وانتي بخير",
+            "كل عام وانتي مبسوطه",
+            "كل عام وانتي تصغير مو تكبرين",
+            "كل عام وانتي أجمل وأجمل يوم ورا يوم",
+            "واسف على التأخير يا حبيبتي انتي",
+            "الوعد بعد يومين بفورت يا روح الروح❤️"
         ];
 
         // --- DOM ELEMENTS ---
