--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                     "Asset/ghnd1.png",
                     "Asset/ghnd2.png",
                     "Asset/ghnd4.png",
+                    "Asset/image.png",
                     "Asset/ghnd3.png"
                 ]
             },
@@ -119,6 +120,7 @@
                     "Asset/ghnd1.png",
                     "Asset/ghnd2.png",
                     "Asset/ghnd4.png",
+                    "Asset/image.png",
                     "Asset/ghnd3.png"
                 ]
             }
