--- a/index.html
+++ b/index.html
@@ -130,10 +130,11 @@
             "كل عام وانتي الحب",
             "كل عام وانتي بخير",
             "كل عام وانتي مبسوطه",
-            "كل عام وانتي تصغير مو تكبرين",
+            "كل عام وانتي تصغرين مو تكبرين",
             "كل عام وانتي أجمل وأجمل يوم ورا يوم",
             "واسف على التأخير يا حبيبتي انتي",
-            "الوعد بعد يومين بفورت يا روح الروح❤️"
+            "الوعد بعد يومين بفورت يا روح الروح❤️",
+            "❤️ والموقع هذا مارح اقفله لين اموت خليه ذكرى عندك"
         ];
 
         // --- DOM ELEMENTS ---
