--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Background Video -->
     <div id="bg-video-container">
         <!-- Default video is generic cinematic nature -->
-        <video id="bg-video" autoplay loop muted>
+        <video id="bg-video" autoplay loop muted playsinline>
             <source src="Asset/Live.mp4" type="video/mp4">
         </video>
         <div class="overlay"></div>
